# spackel

./: .gitignore  Cargo.toml  README.md  bar  compile  foo  makefile  prelude.rs  runtime.rs
examples/: collatz.spkl  fibonacci.spkl  foo.spkl  hello.spkl  macros.spkl  phi.spkl  recursion.spkl  repeat.spkl  then-else.spkl  then.spkl  types-as-values.spkl
src/: call_graph.rs  compiler.rs  diagnostics.rs  formatter.rs  interpreter.rs  ir.rs  iter.rs  lexer.rs  main.rs  parser.rs  peephole.rs  ssa.rs  stack.rs  typ.rs  unicode.rs  vsh.txt
src/ssa/: renaming.rs
tree-sitter-spackel/: Cargo.toml  grammar.js  package-lock.json  package.json
tree-sitter-spackel/queries/: highlights.scm  indents.scm  textobjects.scm
