[package]
name = "spackel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
codemap = "0.1.3"
cranelift = "0.95.1"
cranelift-module = "0.95.1"
cranelift-object = "0.95.1"
extra-iterators = { git = "https://github.com/Johan-Mi/extra-iterators", version = "0.1.0" }
itertools = { version = "0.10.5", default-features = false }
